COMPLEX Projet 2 en C

--- a/COMPLEX_TME/Projet 2/RandomisesApproches/Makefile
+++ b/COMPLEX_TME/Projet 2/RandomisesApproches/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 GCC_FLAGS = -Wall -g
 
-all: ex6
+all: ex6 ex7
 
 randomises_et_approches.o: randomises_et_approches.c
 	$(CC) $(GCC_FLAGS) -c randomises_et_approches.c -lgmp
@@ -9,8 +9,14 @@ randomises_et_approches.o: randomises_et_approches.c
 test_cases_ex6.o: test_cases_ex6.c
 	$(CC) $(GCC_FLAGS) -c test_cases_ex6.c -lgmp
 
+test_cases_ex7.o: test_cases_ex7.c
+	$(CC) $(GCC_FLAGS) -c test_cases_ex7.c -lgmp
+
 ex6: randomises_et_approches.o test_cases_ex6.o
 	$(CC) $(GCC_FLAGS) -o ex6 randomises_et_approches.o test_cases_ex6.o -lgmp
 
+ex7: randomises_et_approches.o test_cases_ex7.o
+	$(CC) $(GCC_FLAGS) -o ex7 randomises_et_approches.o test_cases_ex7.o -lgmp
+
 clean:
-	rm -f *.o *\~ ex6 
+	rm -f *.o *\~ *gch ex6 
