--- a/AAGB/Simultation_Ecosytème/Makefile
+++ b/AAGB/Simultation_Ecosytème/Makefile
@@ -1,4 +1,4 @@
-GCC_FLAGS = -Wall -g
+GCC_FLAGS = -W -Wall -Werror -Wextra -g 
 
 all     : ecosy
 
@@ -9,8 +9,8 @@ ecosys.o: ecosys.c
 	gcc $(GCC_FLAGS) -c ecosys.c
 
 ecosy   : main1.o ecosys.o
-	gcc $(GCC_FLAGS) -o ecosy main1.o ecosys.o
+	gcc $(GCC_FLAGS) -o ecosy main1.o ecosys.o  -lncurses
 
 clean	:
-	rm -f *.o *~ ecosy
+	rm -f *.o *~ a.out ecosy 
 
